@@ -27,6 +27,7 @@
 		<module>spring-boot-sample-actuator-log4j2</module>
 		<module>spring-boot-sample-actuator-noweb</module>
 		<module>spring-boot-sample-actuator-ui</module>
+		<module>spring-boot-sample-actuator-custom-security</module>
 		<module>spring-boot-sample-amqp</module>
 		<module>spring-boot-sample-aop</module>
 		<module>spring-boot-sample-atmosphere</module>
@@ -46,11 +47,6 @@
 		<module>spring-boot-sample-devtools</module>
 		<module>spring-boot-sample-flyway</module>
 		<module>spring-boot-sample-hateoas</module>
-		<module>spring-boot-sample-hypermedia</module>
-		<module>spring-boot-sample-hypermedia-gson</module>
-		<module>spring-boot-sample-hypermedia-jpa</module>
-		<module>spring-boot-sample-hypermedia-ui</module>
-		<module>spring-boot-sample-hypermedia-ui-secure</module>
 		<module>spring-boot-sample-integration</module>
 		<module>spring-boot-sample-jersey</module>
 		<module>spring-boot-sample-jersey1</module>
@@ -63,20 +59,17 @@
 		<module>spring-boot-sample-jta-bitronix</module>
 		<module>spring-boot-sample-jta-narayana</module>
 		<module>spring-boot-sample-jta-jndi</module>
+		<module>spring-boot-sample-junit-jupiter</module>
 		<module>spring-boot-sample-liquibase</module>
 		<module>spring-boot-sample-logback</module>
-		<module>spring-boot-sample-metrics-dropwizard</module>
-		<module>spring-boot-sample-metrics-opentsdb</module>
-		<module>spring-boot-sample-metrics-redis</module>
 		<module>spring-boot-sample-parent-context</module>
 		<module>spring-boot-sample-profile</module>
 		<module>spring-boot-sample-property-validation</module>
+		<module>spring-boot-sample-quartz</module>
 		<module>spring-boot-sample-secure</module>
-		<module>spring-boot-sample-secure-oauth2</module>
-		<module>spring-boot-sample-secure-oauth2-actuator</module>
-		<module>spring-boot-sample-secure-oauth2-resource</module>
+		<module>spring-boot-sample-secure-webflux</module>
 		<module>spring-boot-sample-servlet</module>
-		<module>spring-boot-sample-session-redis</module>
+		<module>spring-boot-sample-session</module>
 		<module>spring-boot-sample-simple</module>
 		<module>spring-boot-sample-test</module>
 		<module>spring-boot-sample-test-nomockito</module>
@@ -96,7 +89,6 @@
 		<module>spring-boot-sample-web-mustache</module>
 		<module>spring-boot-sample-web-secure</module>
 		<module>spring-boot-sample-web-secure-custom</module>
-		<module>spring-boot-sample-web-secure-github</module>
 		<module>spring-boot-sample-web-secure-jdbc</module>
 		<module>spring-boot-sample-web-static</module>
 		<module>spring-boot-sample-web-ui</module>
@@ -267,4 +259,26 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	<profiles>
+		<profile>
+			<id>java9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<properties>
+				<aspectj.version>1.9.0.BETA-7</aspectj.version>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-modules java.base,java.xml.bind</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
